test for dynamic changes